--- a/EP.CursoMVC.Infra.Data/EP.CursoMVC.Infra.Data.csproj
+++ b/EP.CursoMVC.Infra.Data/EP.CursoMVC.Infra.Data.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\ClienteRepository.cs" />
     <Compile Include="Repository\Repository.cs" />
+    <Compile Include="UnifOfWork\UnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
