--- a/EP.CursoMVC.Domain/EP.CursoMVC.Domain.csproj
+++ b/EP.CursoMVC.Domain/EP.CursoMVC.Domain.csproj
@@ -42,15 +42,19 @@
     <Compile Include="Interfaces\IClienteService.cs" />
     <Compile Include="Interfaces\IRepositoryRead.cs" />
     <Compile Include="Interfaces\IRepositoryWrite.cs" />
+    <Compile Include="Interfaces\IUnitOfWork.cs" />
     <Compile Include="Models\Cliente.cs" />
     <Compile Include="Models\Endereco.cs" />
     <Compile Include="Models\Entity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ClienteService.cs" />
+    <Compile Include="Specifications\Clientes\ClienteDevePossuirCPFUnicoSpecification.cs" />
+    <Compile Include="Specifications\Clientes\ClienteDevePossuirEmailUnicoSpecification.cs" />
     <Compile Include="Specifications\Clientes\ClienteDeveSerMaiorDeIdadeSpecification.cs" />
     <Compile Include="Specifications\Clientes\ClienteDeveTerCPFValidoSpecification.cs" />
     <Compile Include="Specifications\Clientes\ClienteDeveTerEmailValidoSpecification.cs" />
     <Compile Include="Specifications\GenericSpecification.cs" />
+    <Compile Include="Validations\Clientes\ClienteEstaAptoParaCadastroValidation.cs" />
     <Compile Include="Validations\Clientes\ClienteEstaConsistenteValidation.cs" />
     <Compile Include="Value Objects\CPF.cs" />
     <Compile Include="Value Objects\Email.cs" />
