Alteração com CORS na WebAPI

--- a/EP.CursoMVC.REST.ClienteAPI/Web.config
+++ b/EP.CursoMVC.REST.ClienteAPI/Web.config
@@ -17,6 +17,13 @@
     <add name="DefaultConnection" connectionString="Data Source=NOTE;Initial Catalog=CursoMVCEP_Oficial;User=sa;Password=#130402#" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.webServer>
+    
+    <validation validateIntegratedModeConfiguration="false" />
+    <modules runAllManagedModulesForAllRequests="true">
+      <remove name="WebDAVModule" />
+      <!-- ADD THIS -->
+    </modules>
+    
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
